src/styles/modules/mail-composer/_mail-composer.scss
/**
* Mail composer module
*/

// == Mail composer
$mail_composer_padding_x: 0.75rem;

a {
	cursor: pointer;
}

.keyboard-open {
	bottom: 255px !important;
}

.compose-mail-container{
	position: fixed;
	bottom: 50px;
	right: 15px;
	left: 83px;
	z-index: 100;
	display: flex;
	align-items: flex-end;
	flex-direction: row-reverse;
	@include media(">sm") {
		> .ng-star-inserted {
			width: 100%;
		}
	}
    @include media(">=ipad") {
        left: auto;
        right: 0;
        bottom: 0;
        > .ng-star-inserted {
            width: auto;
        }
    }
}

.mail-composer.is-sticky {
	position: relative;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	float: right;
	z-index: $zindex-default + 999;
	overflow-x: hidden;
	overflow-y: auto;
	display: none;
	font-size: 0.875rem;

	// == is-minimized
	&.is-active {
		display: block;
	}

	@include media(">sm") {
		top: auto;
		left: auto;
		overflow: inherit;
		width: 100%;
		&.is-minimized {

		}
	}

	@include media("<sm") {
		position: fixed;
		.mail-compose-editable-body {
			margin-top: 0;
			max-height: unset;
            position: relative;
		}

		.mail-compose-box {
			max-height: unset;			
		}

		.mail-compose-box-inner {
			height: 82.5vh;
			width: 100vw;
		}

		.mail-compose-editable-box {
			 height: unset; 
			max-height: unset;
		}
	}
	.mail-composer-dialog{
		box-shadow: $shadow-dark;
	}
    @include media(">=ipad") {
      width: 40rem;
    }
}

.shadow {
	box-shadow: $shadow;
}

// == Mail compose is-bordered
.mail-composer.is-borderd {
	border: 1px solid $dropdown-border-color;
}

// == Is minimized
.mail-composer.is-minimized {
	.mail-composer-body,
	.mail-composer-footer {
		display: none;
	}
}


.mail-composer.is-maximized {

    @include media(">sm") {
	  position: fixed;
      right: 1.563rem;
      left: 1.563rem;
      width: 80%;
      margin: auto;
      top: 3rem;
      bottom: auto;
      .mail-compose-editable-box {
        background: #ffffff;
        height: 60vh;
        max-height: 100%;
        overflow-y: auto;
      }
    }
  
	.mail-composer-body,
	.mail-composer-footer {
		display: block;
	}


}

// == Is full screen
.mail-composer.is-fullscreen {
	// top: 5.12rem;
	@include media(">sm") {
		width: calc(100% - 340px);

		.mail-compose-box-inner {
			min-height: 100vh;
		}
	}
}

.mail-composer-header {
	position: relative;
	padding: 1.063rem $mail_composer_padding_x;
	background: $brand-secondary;

	@include media(">sm") {
		padding: 0.625rem $mail_composer_padding_x;
	}
}

.mail-composer-title {	
	color: $brand-white;
	line-height: 1.33;

	@include media(">sm") {
		padding: 0.9375rem;
	}
}

.mail-actions-list {
	position: absolute;
	top: 50%;
	right: $mail_composer_padding_x;
	display: flex;
	align-items: center;
	justify-content: flex-end;
	color: #a1abb5;
	transform: translateY(-50%);
}

.mail-actions-item {
	cursor: pointer;
	&:not(:last-of-type) {
		margin-right: 1.25rem;
	}

	[role="button"] {
		padding: 0 0;
		background: none;
		border: none;
		color: #a1abb5;
	}

	i {
		display: block;
		font-size: .813rem;//~0.875rem;
		line-height: 1;
	}
}

// == Mail tag list
.list-label-tag {
	position: relative;
	padding: 2px 25px 3px 5px;
	text-align: left;
	background: #f6f6f6;
	border: 1px solid #dadada;
	border-radius: 4px;
	line-height: 1.15;

	.tag-close {
		position: absolute;
		top: 50%;
		right: 5px;
		line-height: 1;
		transform: translateY(-50%);
	}
}

// == Mail compose fields
.mail-compose-field {
	display: flex;
	align-items: center;
	position: relative;
	padding: 0.2rem $mail_composer_padding_x;
	background: $brand-white;
	border-bottom: 1px solid $input-border-color;

	@include media(">sm") {
		font-size: 0.75rem;
	}

	.mail-label {
		display: block;
		margin-right: 0.5rem;
		color: rgba(0, 0, 0, 0.38);
		line-height: 1;
	}

	.mail-compose-control {
		margin-right: 3.125rem;
		padding: 0.5rem 0;
		border: 0;
		line-height: 1.3;
		resize: none;
		width: 100%;
		overflow: hidden;

		@include media(">sm") {
			padding: 0.688rem 0 0.5rem;
		}
	}
    @include media("<sm") {
      &.mail-compose-field-to{
        position: relative;
        padding-left: 38px;
        .label-to{
          position: absolute;
          top: 11px;
          left: 12px;
        }
      }
    }
}

.extra-mail-label {
	position: absolute;
	top: 12px;
	right: 0.625rem;
	display: flex;
	align-items: right;

	.mail-label {
		cursor: pointer;
	}

	.mail-label:not(:last-of-type) {
		margin-right: 0.5rem;
	}
}

.mail-compose-editable-body {
	overflow-y: hidden;
	max-height: 667px;

	@include media("<=sm") {
		margin-top: 49px;
	}
}

.mail-compose-box {
	max-height: 667px;
	overflow-x: hidden;
	overflow-y: auto;
	line-height: 1.67rem;
	background: white;
	
	@include media(">sm") {
		font-size: 0.75rem;
	}
}

.mail-compose-box-inner {
	background: $brand-white;
	min-height: 250px;
}

.mail-compose-editable-box {
	background: $brand-white;
	height: 250px;
	max-height: 250px;
	overflow-y: auto;

	&[contenteditable]:focus {
		outline: 0;
	}

	.ql-editor {
		padding-top: 65px;
		p {
			font-size: 14px;
		}
	}
}

// Mail composer footer
.mail-composer-footer {
	padding: 0.5rem $mail_composer_padding_x;
	background: $brand-faded;
	border-top: 1px solid $input-border-color;
	border-bottom: 1px solid $input-border-color;

	@include media("<=sm") {
		position: absolute;
		top: 0;
		right: 0;
		left: 0;
		border-top: 0;
	}
}

.mail-composer-actions-row {
	margin: 0 -0.625rem;	
}

.mail-composer-actions-col {
	padding: 0 0.625rem;
	
	&-lg {
		flex: 0 0 70%;
		max-width: 70%;
	}

	&-sm {
		flex: 0 0 30%;
		max-width: 30%;
	}
}

.mail-composer-actions {
	margin: 0 -.375rem;
	padding: 0 0;
	list-style: none;

	>li {
		padding: 0 .375rem;
		line-height: 1;

		@include media("<=sm") {
			&:last-of-type {
				padding: 0;
			}
		}
	}

	.btn-mail-send,
	.btn {
		font-size: 0.75rem;
		min-width: 85px;
	}
    .dropdown-menu{
		@include media("<=sm") {
			top: 43px !important;
			border-top: none;
			border-radius: 0 4px 4px;
		}
    }
}

.actions-btn {
	position: relative;
	padding: 1rem 0.5rem;
	background: $brand-faded;
	border: 1px solid $input-border-color;
	border-radius: 2px;
	color: $brand-light-gray;
	height: 2rem;
	width: 2.25rem;

	.show > & {
		background: $brand-white;
		box-shadow: 0 2px 9px 0 rgba($brand-black, 0.15);
	}

	.icon,
	&.dropdown-toggle.hide-arrow .icon {
		position: absolute;
		top: 50%;
		left: 50%;
		font-size: 1rem;
		transform: translateX(-50%) translateY(-50%);
	}

	&.dropdown-toggle .icon {
		left: 0.375rem;
		transform: translateY(-50%);	
	}
}

.mail-actions-form-title .actions-btn {
	margin-left: -5px;
}

// == Attachment uploader
.disabled {
	pointer-events: none !important;
}

.attach-uploader-holder {
	margin: 1rem;
}

.attach-uploader {
	position: relative;
	margin-bottom: 0.5rem;
	padding: 0.563rem 1.563rem 0.563rem 0.75rem;
	background: $brand-faded;
	border: 1px solid $input-border-color;
	border-radius: 2px;
	line-height: 1;
	max-width: 90%;

	&:last-of-type {
		margin-bottom: 0;
	}

	// == Progress bar
	.progress {
		position: absolute;
		top: 50%;
		right: 1.875rem;
		background: $brand-white;
		border: 1px solid $input-border-color;
		border-radius: 0;
		width: 55px;
		transform: translateY(-50%);

		@include media(">sm") {
			width: 95px;
		}
	}

	.progress-bar {
		height: 0.875rem;
		background: $brand-secondary;
	}
}

.attach-uploader-close {
	position: absolute;
	top: 50%;
	right: 0.75rem;
	margin-top: .063rem;
	padding: 0 0;
	background: transparent;
	border: 0;
	color: $brand-light-gray;
	font-size: .613rem;
	transform: translateY(-50%);
}

.attach-name {
	color: #34495e;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.file-name{
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: bottom;
  white-space: nowrap;
  max-width: 300px;
  color: #15c;
  font-weight: bold;
}
.attach-size {
  display: inline-block;
  margin-left: 0.375rem;
  color: #777;
  font-weight: bold;
}

.send-mail-item {
	@include media("<=sm") {
		position: fixed;
		right: 0.938rem;
		bottom: 5.625rem;
	}
}

// == Typo actions holder
.left-0 {
	left: 0 !important;
}

.is-centered.typo-actions-dropdown-menu {
	left: 50% !important;
	margin-left: 30px;
	transform: translateX(-50%) translateY(10px) !important;
}

.show>.is-centered.typo-actions-dropdown-menu {
	transform: translateX(-50%) translateY(0%) !important;
}

.typo-actions-dropdown-menu .typo-actions-dropdown-menu {
	margin-left: 0 !important;
}

.dropup .dropdown-menu {
	margin-bottom: 8px;
}

.mail-comopser-typo-actions-holder {
	padding: 0.625rem 0.75rem;
}

.actions-btn.dropdown-toggle:not(.hide-arrow) {
	width: 3.25rem;
	text-align: left;

	&.actions-btn-sm {
		width: 2.750rem;
	}
}

// == Color picker
.dropdown-menu {
	.color-picker-holder {
		padding: 1.125rem 1.563rem;
		width: 352px;//~370px;
	}
}

.color-picker-title {
	margin-bottom: 0.875rem;
	color: $brand-black;
	font-size: 0.75rem;
	line-height: 1;
}

.color-picker-list {
	margin: 0 -2px;
	padding: 0 0;
	list-style: none;

	>li {
		margin-bottom: 4px;
		padding: 0 2px;
		.color-shape {
			position: relative;
			border-radius: 0;
			height: 1rem;
			width: 1rem;
			cursor: pointer;

			&.is-selected {
				border: 2px solid #9b9b9b !important;
			}
		}
	}
}

// == Typo dropdown
.typo-holder {
	padding: 1.125rem 2.188rem;
}

.typo-family-dropdown-menu {
	left: 0 !important;
	margin-left: -0.75rem;
	width: 245px;
}

.typo-size-dropdown-menu {
	left: 0 !important;
	width: 180px;
}

.typo-list {
	font-size: 0.875rem;
	line-height: 1;
	
	>li {
		&:not(:last-of-type) {
			margin-bottom: 0.938rem;
		}

      button{
        border: 0;
        cursor: pointer;
      }
	}
}

.typo-select-link {
	position: relative;
	color: rgba(0, 0, 0, 0.87);
	&:hover {
		color: darken(rgba(0, 0, 0, 0.87), 5%);
	}

	&.is-active, &.ql-active {
		font-weight: 600;

		&::before {
			position: absolute;
			top: 0.235rem;
			left: -1.125rem;
			content: "\f00c";
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			display: inline-block;
			font-family: 'Font Awesome 5 Free';
			font-weight: 900;
			font-size: 0.718rem;
			font-style: normal;
			font-variant: normal;
			text-rendering: auto;
			line-height: 1;
		}
	}

	// == typo sizes
	&.is-small {
		font-size: .688rem;
	}

	&.is-normal {
		font-size: 0.875rem;
	}

	&.is-large {
		font-size: 1.375rem;
	}

	&.is-huge {
		font-size: 2.25rem;
	}
}


// == Timer dropdown
.timer-dropdown-menu:not(.left-0) {
	width: 290px;
	left: 50% !important;
	font-size: 0.875rem;
	transform: translateX(-50%) translateY(10px) !important;

	.show > & {
		transform: translateX(-50%) translateY(0px) !important;
	}

	.close {
		position: absolute;
		top: 1.125rem;
		right: 0.938rem;
		opacity: 1;
		color: $brand-black;
		font-size: 0.875rem;
	}
}

.dropdown-header {
	padding: 1.125rem 1.5rem;
	border-bottom: 1px solid #f5f5f5;
}

.dropdown-body {
	padding: 0.75rem 1.5rem 1rem;
}

.timer-set-row {
	margin-right: -.75rem;
	margin-left: -.75rem
}

.timer-set-col {
	padding-right: .75rem;
	padding-left: .75rem;
}

.timer-set-content {
	.timer-set-title,
	.timer-set-label {
		font-size: 0.75rem;
	}

	.timer-set-title {
		margin-bottom: 0.625rem;
		line-height: 1.5;
	}

	.timer-set-label {
		margin-right: 0.375rem;
		margin-left: 0.375rem;
	}
}

.timer-dropdown-menu {
	.dropdown-link {
		display: block;
		padding: 0.5rem 0.75rem;
		color: $brand-gray;
		font-size: 0.813rem;
		text-align: center;

		&:hover {
			background: $brand-faded;
		}
	}
}

.dropdown-footer {
	padding: 1rem 1.5rem;
	background: #f5f5f5;
}


/* Toolbar selected button css.*/
.ql-active {
	background: white !important;
	font-weight: bold !important;

	i {
		font-weight: bold !important;
	}
}

